<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/text_qpi"
            android:layout_width="match_parent"
            android:layout_height="82dp"
            android:layout_margin="4dp"
            android:background="@drawable/edit_text_border"
            android:ems="10"
            android:hint="@string/qpi"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/text_equation"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="4dp"
            android:background="@drawable/edit_text_border"
            android:ems="10"
            android:hint="@string/equation"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="italic" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:stretchColumns="*">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/a"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="fill"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/blue_btn_design"
                    android:text="@string/a_btn"
                    android:textSize="40sp" />

                <Button
                    android:id="@+id/bplus"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="fill"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/blue_btn_design"
                    android:text="@string/bplus_btn"
                    android:textSize="40sp" />

                <Button
                    android:id="@+id/b"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="fill"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/blue_btn_design"
                    android:text="@string/b_btn"
                    android:textSize="40sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/cplus"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="fill"
                    android:layout_weight="1"
                    android:text="@string/cplus_btn"
                    android:textSize="40sp"
                    android:background="@drawable/blue_btn_design"
                    android:layout_margin="4dp"/>

                <Button
                    android:id="@+id/c"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="fill"
                    android:layout_weight="1"
                    android:text="@string/c_btn"
                    android:textSize="40sp"
                    android:background="@drawable/blue_btn_design"
                    android:layout_margin="4dp"/>

                <Button
                    android:id="@+id/d"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="fill"
                    android:layout_weight="1"
                    android:text="@string/d_btn"
                    android:textSize="40sp"
                    android:background="@drawable/blue_btn_design"
                    android:layout_margin="4dp"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/f"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="fill"
                    android:layout_weight="1"
                    android:text="@string/f_btn"
                    android:textSize="40sp"
                    android:background="@drawable/red_btn"
                    android:layout_margin="4dp"/>

                <Button
                    android:id="@+id/clear"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="fill"
                    android:layout_weight="1"
                    android:text="@string/clear_btn"
                    android:textAllCaps="false"
                    android:textSize="38sp"
                    android:background="@drawable/gray_btn"
                    android:layout_margin="4dp"/>

                <Button
                    android:id="@+id/equals"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="fill"
                    android:layout_weight="1"
                    android:text="@string/equals_btn"
                    android:textSize="40sp"
                    android:background="@drawable/green_btn"
                    android:layout_margin="4dp"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/three"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="fill"
                    android:layout_weight="1"
                    android:text="@string/three_btn"
                    android:textSize="40sp"
                    android:background="@drawable/yellow_btn"
                    android:layout_margin="4dp"/>

                <Button
                    android:id="@+id/five"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="fill"
                    android:layout_weight="1"
                    android:text="@string/five_btn"
                    android:textSize="40sp"
                    android:background="@drawable/yellow_btn"
                    android:layout_margin="4dp"/>

                <Button
                    android:id="@+id/nine"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="fill"
                    android:layout_weight="1"
                    android:text="@string/nine_btn"
                    android:textSize="40sp"
                    android:background="@drawable/yellow_btn"
                    android:layout_margin="4dp"/>

            </TableRow>
        </TableLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>